fix font vertical align

--- a/src/global.css
+++ b/src/global.css
@@ -29,6 +29,7 @@ h1, .h1, h2, h3, h4, h5, h6 {
   font-family: 'SomeTimeLater', sans-serif;
   transform: scaleX(var(--scale-x));
   transform-origin: left;
+  translate: 0 12%;
   width: calc(100%/var(--scale-x));
   display: block;
 }
